--- a/menu-la-palette.html
+++ b/menu-la-palette.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>ohmyfood</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/menu-style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -15,21 +15,23 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700&family=Shrikhand&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="package.json">
 </head>
 
 <body>
     <header class="header">
         <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
-        <img class="size-logo" src="images/logo/ohmyfood.png" alt="logo-ohmyfood">
+        <h1>ohmyfood</h1>
     </header>
     <section class="menu">
         <h2>La palette du goût</h2>
         <section class="starter">
-            <h3 class="starter__title">Entrées</h3>
+            <h3 class="starter__title menu__title">Entrées</h3>
             <!--Card 1-->
-            <div class="starter__card">
-                <div class="starter__card-text">
+            <div class="starter__card menu__card">
+                <div class="starter__card-text menu__card-text">
                     <h4>Fricassée d'escargot</h4>
                     <p>Au pimet d'espelette</p>
                 </div>
@@ -38,8 +40,8 @@
                 </div>
             </div>
             <!--Card 2-->
-            <div class="starter__card">
-                <div class="starter__card-text">
+            <div class="starter__card menu__card">
+                <div class="starter__card-text menu__card-text">
                     <h4>Foie gras de canard mi-cuit</h4>
                     <p>Et ses copeaux de truffe noire</p>
                 </div>
@@ -48,8 +50,8 @@
                 </div>
             </div>
             <!--Card 3-->
-            <div class="starter__card">
-                <div class="starter__card-text">
+            <div class="starter__card menu__card">
+                <div class="starter__card-text menu__card-text">
                     <h4>Oeuf au plat</h4>
                     <p>Assaisonné à la truffe sur lit de caviar</p>
                 </div>
@@ -61,18 +63,18 @@
         <section class="dish">
             <h3 class="dish__title">Plats</h3>
             <!--Card 1-->
-            <div class="dish__card">
-                <div class="dish__card-text">
+            <div class="dish__card menu__card">
+                <div class="dish__card-text menu__card-text">
                     <h4>Filet de boeuf aux herbes</h4>
-                    <p>AAccompagné de sa ribambelle de légumes</p>
+                    <p>Accompagné de sa ribambelle de légumes</p>
                 </div>
                 <div class="dish__card-price">
                     <p>40€</p>
                 </div>
             </div>
             <!--Card 2-->
-            <div class="dish__card">
-                <div class="dish__card-text">
+            <div class="dish__card menu__card">
+                <div class="dish__card-text menu__card-text">
                     <h4>Parmentier de queue de boeuf</h4>
                     <p>À la truffe noire sur sa purée de panais</p>
                 </div>
@@ -81,8 +83,8 @@
                 </div>
             </div>
             <!--Card 3-->
-            <div class="dish__card">
-                <div class="dish__card-text">
+            <div class="dish__card menu__card">
+                <div class="dish__card-text menu__card-text">
                     <h4>Filet de turbot</h4>
                     <p>Aux agrumes</p>
                 </div>
@@ -94,8 +96,8 @@
         <section class="dessert">
             <h3 class="dessert__title">Desserts</h3>
             <!--Card 1-->
-            <div class="dessert__card">
-                <div class="dessert__card-text">
+            <div class="dessert__card menu__card">
+                <div class="dessert__card-text menu__card-text">
                     <h4>Paris-Brest</h4>
                     <p>Revisité</p>
                 </div>
@@ -104,8 +106,8 @@
                 </div>
             </div>
             <!--Card 2-->
-            <div class="dessert__card">
-                <div class="dessert__card-text">
+            <div class="dessert__card menu__card">
+                <div class="dessert__card-text menu__card-text">
                     <h4>Macaron au chocolat d'exception</h4>
                     <p>Et glace à la vanille de Madagascar</p>
                 </div>
@@ -114,8 +116,8 @@
                 </div>
             </div>
             <!--Card 3-->
-            <div class="dessert__card">
-                <div class="dessert__card-text">
+            <div class="dessert__card menu__card">
+                <div class="dessert__card-text menu__card-text">
                     <h4>Mousse au chocolat</h4>
                     <p>Au piment d'Espelette et à la truffe noire</p>
                 </div>
@@ -124,6 +126,9 @@
                 </div>
             </div>
         </section>
+    </section>
+    <section class="section-menu__btn">
+        <input class="menu__btn" type="submit" value="Commander">
     </section>
 
     <footer class="footer">
