ajout animation button

--- a/menu-la-palette.html
+++ b/menu-la-palette.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>ohmyfood</title>
+    <title>La palette du goût</title>
     <link rel="stylesheet" href="css/menu-style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
@@ -136,18 +136,18 @@
 
         <ul class="footer-ul">
             <li class="footer-ul__li">
-                <i class=" footer-ul__li--icon1 icon fas fa-utensils"></i>
-                <a class="footer-ul__li--a" href="#">Proposer un restaurant</a>
+                <i class=" footer-ul__li-icon icon fas fa-utensils"></i>
+                <a class="footer-ul__li-a" href="#">Proposer un restaurant</a>
             </li>
             <li class="footer-ul__li">
-                <i class=" footer-ul__li--icon2 icon fas fa-hands-helping"></i>
-                <a class="footer-ul__li--a" href="#">Devenir partenaire</a>
+                <i class=" footer-ul__li-icon icon fas fa-hands-helping"></i>
+                <a class="footer-ul__li-a" href="#">Devenir partenaire</a>
             </li>
             <li class="footer-ul__li">
-                <a class="footer-ul__li--a" href="#">Mentions légales</a>
+                <a class="footer-ul__li-a" href="#">Mentions légales</a>
             </li>
             <li class="footer-ul__li">
-                <a class="footer-ul__li--a" href="mailto:contact@ohmyfood.com">Contact</a>
+                <a class="footer-ul__li-a" href="mailto:contact@ohmyfood.com">Contact</a>
             </li>
         </ul>
     </footer>
