--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
     </section>
     <section class="restaurant-list">
-        <h1>restaurants</h1>
+        <h2>restaurants</h2>
         <div class="restaurant-list-container">
             <!--Card 1-->
             <div class="card-restaurant">
@@ -129,18 +129,18 @@
 
             <ul class="footer-ul">
                 <li class="footer-ul__li">
-                    <i class=" footer-ul__li--icon1 icon fas fa-utensils"></i>
-                    <a class="footer-ul__li--a" href="#">Proposer un restaurant</a>
+                    <i class=" footer-ul__li-icon icon fas fa-utensils"></i>
+                    <a class="footer-ul__li-a" href="#">Proposer un restaurant</a>
                 </li>
                 <li class="footer-ul__li">
-                    <i class=" footer-ul__li--icon2 icon fas fa-hands-helping"></i>
-                    <a class="footer-ul__li--a" href="#">Devenir partenaire</a>
+                    <i class=" footer-ul__li-icon icon fas fa-hands-helping"></i>
+                    <a class="footer-ul__li-a" href="#">Devenir partenaire</a>
                 </li>
                 <li class="footer-ul__li">
-                    <a class="footer-ul__li--a" href="#">Mentions légales</a>
+                    <a class="footer-ul__li-a" href="#">Mentions légales</a>
                 </li>
                 <li class="footer-ul__li">
-                    <a class="footer-ul__li--a" href="mailto:contact@ohmyfood.com">Contact</a>
+                    <a class="footer-ul__li-a" href="mailto:contact@ohmyfood.com">Contact</a>
                 </li>
             </ul>
         </div>
