--- a/src/menu-la-palette.html
+++ b/src/menu-la-palette.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>La palette du goût</title>
     <link rel="stylesheet" href="css/menu-style.css">
+    <link rel="stylesheet" href="css/menu-style-tablet.css">
+    <link rel="stylesheet" href="css/menu-style-desktop.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -23,114 +25,133 @@
     <header class="header">
         <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
         <h1>ohmyfood</h1>
-        <div class="header__img">
-        </div>
     </header>
-    <section class="menu">
-        <h2>La palette du goût</h2>
-        <section class="starter">
-            <h3 class="starter__title menu__title">Entrées</h3>
-            <!--Card 1-->
-            <div class="starter__card menu__card">
-                <div class="starter__card-text menu__card-text">
-                    <h4>Fricassée d'escargot</h4>
-                    <p>Au pimet d'espelette</p>
-                </div>
-                <div class="starter__card-price">
-                    <p>25€</p>
-                </div>
+    <main class="main">
+        <div class="header__img">
+            <img class="header__img-style" src="images/restaurants/la-palette-du-gout.jpg"
+                alt="restaurant la palette du gout">
+        </div>
+        <section class="menu">
+            <div class="menu__main-title">
+                <h2>La palette du goût</h2>
+                <i class="fa-solid fa-heart"></i>
             </div>
-            <!--Card 2-->
-            <div class="starter__card menu__card">
-                <div class="starter__card-text menu__card-text">
-                    <h4>Foie gras de canard mi-cuit</h4>
-                    <p>Et ses copeaux de truffe noire</p>
+            <section class="starter">
+                <div class="starter__title menu__title">
+                    <h3>Entrées</h3>
                 </div>
-                <div class="starter__card-price">
-                    <p>35€</p>
+                <div class="menu__container-cards">
+                    <!--Card 1-->
+                    <div class=" menu__card">
+                        <div class="menu__card-text">
+                            <h4>Fricassée d'escargot</h4>
+                            <p>Au pimet d'espelette</p>
+                        </div>
+                        <div class="menu__card-price">
+                            <p>25€</p>
+                        </div>
+                    </div>
+                    <!--Card 2-->
+                    <div class="menu__card">
+                        <div class="menu__card-text">
+                            <h4>Foie gras de canard mi-cuit</h4>
+                            <p>Et ses copeaux de truffe noire</p>
+                        </div>
+                        <div class="menu__card-price">
+                            <p>35€</p>
+                        </div>
+                    </div>
+                    <!--Card 3-->
+                    <div class="menu__card">
+                        <div class="menu__card-text">
+                            <h4>Oeuf au plat</h4>
+                            <p>Assaisonné à la truffe sur lit de caviar</p>
+                        </div>
+                        <div class="menu__card-price">
+                            <p>20€</p>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <!--Card 3-->
-            <div class="starter__card menu__card">
-                <div class="starter__card-text menu__card-text">
-                    <h4>Oeuf au plat</h4>
-                    <p>Assaisonné à la truffe sur lit de caviar</p>
+            </section>
+            <section class="dish">
+                <div class="menu__title">
+                    <h3>Plats</h3>
                 </div>
-                <div class="starter__card-price">
-                    <p>20€</p>
+                <div class="menu__container-cards">
+                    <!--Card 1-->
+                    <div class="menu__card">
+                        <div class="menu__card-text">
+                            <h4>Filet de boeuf aux herbes</h4>
+                            <p>Accompagné de sa ribambelle de légumes</p>
+                        </div>
+                        <div class="menu__card-price">
+                            <p>40€</p>
+                        </div>
+                    </div>
+                    <!--Card 2-->
+                    <div class="menu__card">
+                        <div class="menu__card-text">
+                            <h4>Parmentier de queue de boeuf</h4>
+                            <p>À la truffe noire sur sa purée de panais</p>
+                        </div>
+                        <div class="menu__card-price">
+                            <p>35€</p>
+                        </div>
+                    </div>
+                    <!--Card 3-->
+                    <div class="menu__card">
+                        <div class="menu__card-text">
+                            <h4>Filet de turbot</h4>
+                            <p>Aux agrumes</p>
+                        </div>
+                        <div class="menu__card-price">
+                            <p>44€</p>
+                        </div>
+                    </div>
                 </div>
-            </div>
+            </section>
+            <section class="dessert">
+                <div class="menu__title">
+                    <h3>Desserts</h3>
+                </div>
+                <div class="menu__container-cards">
+                    <!--Card 1-->
+                    <div class="menu__card">
+                        <div class="menu__card-text">
+                            <h4>Paris-Brest</h4>
+                            <p>Revisité</p>
+                        </div>
+                        <div class="menu__card-price">
+                            <p>18€</p>
+                        </div>
+                    </div>
+                    <!--Card 2-->
+                    <div class="menu__card">
+                        <div class="menu__card-text">
+                            <h4>Macaron au chocolat d'exception</h4>
+                            <p>Et glace à la vanille de Madagascar</p>
+                        </div>
+                        <div class="menu__card-price">
+                            <p>22€</p>
+                        </div>
+                    </div>
+                    <!--Card 3-->
+                    <div class="menu__card">
+                        <div class="menu__card-text">
+                            <h4>Mousse au chocolat</h4>
+                            <p>Au piment d'Espelette et à la truffe noire</p>
+                        </div>
+                        <div class="menu__card-price">
+                            <p>23€</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </section>
-        <section class="dish">
-            <h3 class="dish__title">Plats</h3>
-            <!--Card 1-->
-            <div class="dish__card menu__card">
-                <div class="dish__card-text menu__card-text">
-                    <h4>Filet de boeuf aux herbes</h4>
-                    <p>Accompagné de sa ribambelle de légumes</p>
-                </div>
-                <div class="dish__card-price">
-                    <p>40€</p>
-                </div>
-            </div>
-            <!--Card 2-->
-            <div class="dish__card menu__card">
-                <div class="dish__card-text menu__card-text">
-                    <h4>Parmentier de queue de boeuf</h4>
-                    <p>À la truffe noire sur sa purée de panais</p>
-                </div>
-                <div class="dish__card-price">
-                    <p>35€</p>
-                </div>
-            </div>
-            <!--Card 3-->
-            <div class="dish__card menu__card">
-                <div class="dish__card-text menu__card-text">
-                    <h4>Filet de turbot</h4>
-                    <p>Aux agrumes</p>
-                </div>
-                <div class="dish__card-price">
-                    <p>44€</p>
-                </div>
-            </div>
+        <section class="section-menu__btn">
+            <input class="menu__btn" type="submit" value="Commander">
         </section>
-        <section class="dessert">
-            <h3 class="dessert__title">Desserts</h3>
-            <!--Card 1-->
-            <div class="dessert__card menu__card">
-                <div class="dessert__card-text menu__card-text">
-                    <h4>Paris-Brest</h4>
-                    <p>Revisité</p>
-                </div>
-                <div class="dessert__card-price">
-                    <p>18€</p>
-                </div>
-            </div>
-            <!--Card 2-->
-            <div class="dessert__card menu__card">
-                <div class="dessert__card-text menu__card-text">
-                    <h4>Macaron au chocolat d'exception</h4>
-                    <p>Et glace à la vanille de Madagascar</p>
-                </div>
-                <div class="dessert__card-price">
-                    <p>22€</p>
-                </div>
-            </div>
-            <!--Card 3-->
-            <div class="dessert__card menu__card">
-                <div class="dessert__card-text menu__card-text">
-                    <h4>Mousse au chocolat</h4>
-                    <p>Au piment d'Espelette et à la truffe noire</p>
-                </div>
-                <div class="dessert__card-price">
-                    <p>23€</p>
-                </div>
-            </div>
-        </section>
-    </section>
-    <section class="section-menu__btn">
-        <input class="menu__btn" type="submit" value="Commander">
-    </section>
+    </main>
 
     <footer class="footer">
         <h2 class="footer__logo">ohmyfood</h2>
