--- a/src/menu-la-palette.html
+++ b/src/menu-la-palette.html
@@ -50,6 +50,7 @@
                         <div class="menu__card-price">
                             <p>25€</p>
                         </div>
+                        <div class="check-box"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                     <!--Card 2-->
                     <div class="menu__card">
@@ -60,6 +61,7 @@
                         <div class="menu__card-price">
                             <p>35€</p>
                         </div>
+                        <div class="check-box"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                     <!--Card 3-->
                     <div class="menu__card">
@@ -70,6 +72,7 @@
                         <div class="menu__card-price">
                             <p>20€</p>
                         </div>
+                        <div class="check-box"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                 </div>
             </section>
@@ -87,6 +90,7 @@
                         <div class="menu__card-price">
                             <p>40€</p>
                         </div>
+                        <div class="check-box"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                     <!--Card 2-->
                     <div class="menu__card">
@@ -97,6 +101,7 @@
                         <div class="menu__card-price">
                             <p>35€</p>
                         </div>
+                        <div class="check-box"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                     <!--Card 3-->
                     <div class="menu__card">
@@ -107,6 +112,7 @@
                         <div class="menu__card-price">
                             <p>44€</p>
                         </div>
+                        <div class="check-box"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                 </div>
             </section>
@@ -124,6 +130,7 @@
                         <div class="menu__card-price">
                             <p>18€</p>
                         </div>
+                        <div class="check-box"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                     <!--Card 2-->
                     <div class="menu__card">
@@ -134,6 +141,7 @@
                         <div class="menu__card-price">
                             <p>22€</p>
                         </div>
+                        <div class="check-box"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                     <!--Card 3-->
                     <div class="menu__card">
@@ -144,6 +152,7 @@
                         <div class="menu__card-price">
                             <p>23€</p>
                         </div>
+                        <div class="check-box"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                 </div>
             </section>
