refonte animation fadein

--- a/src/menu-la-palette.html
+++ b/src/menu-la-palette.html
@@ -37,7 +37,7 @@
                 <i class="fa-solid fa-heart"></i>
             </div>
             <section class="starter">
-                <div class="starter__title menu__title">
+                <div class="menu__title">
                     <h3>Entrées</h3>
                 </div>
                 <div class="menu__container-cards">
