added heart effect

--- a/src/index.html
+++ b/src/index.html
@@ -75,6 +75,7 @@
                         </div>
                         <button class="card-restaurant__btn" type="button">
                             <i class="card-restaurant__btn-icon-fill fa-solid fa-heart"></i>
+                            <i class="card-restaurant__btn-icon-umpty fa-regular fa-heart"></i>
                         </button>
                     </div>
                 </a>
@@ -91,6 +92,7 @@
                         </div>
                         <button class="card-restaurant__btn" type="button">
                             <i class="card-restaurant__btn-icon-fill fa-solid fa-heart"></i>
+                            <i class="card-restaurant__btn-icon-umpty fa-regular fa-heart"></i>
                         </button>
                     </div>
                 </a>
@@ -107,6 +109,7 @@
                         </div>
                         <button class="card-restaurant__btn" type="button">
                             <i class="card-restaurant__btn-icon-fill fa-solid fa-heart"></i>
+                            <i class="card-restaurant__btn-icon-umpty fa-regular fa-heart"></i>
                         </button>
                     </div>
                 </a>
@@ -123,6 +126,7 @@
                         </div>
                         <button class="card-restaurant__btn" type="button">
                             <i class="card-restaurant__btn-icon-fill fa-solid fa-heart"></i>
+                            <i class="card-restaurant__btn-icon-umpty fa-regular fa-heart"></i>
                         </button>
                     </div>
                 </a>
