--- a/src/menu-la-palette.html
+++ b/src/menu-la-palette.html
@@ -34,7 +34,10 @@
         <section class="menu">
             <div class="menu__main-title">
                 <h2>La palette du goût</h2>
-                <i class="fa-solid fa-heart"></i>
+                <button class="menu-main-title__btn" type="button">
+                    <i class="menu-main-title__btn-icon-fill fa-solid fa-heart"></i>
+                    <i class="menu-main-title__btn-icon-umpty fa-regular fa-heart"></i>
+                </button>
             </div>
             <section class="starter">
                 <div class="menu__title">
