added menu pages 2

--- a/src/menu-le-delice.html
+++ b/src/menu-le-delice.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>ohmyfood</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Le délice des sens</title>
+    <link rel="stylesheet" href="css/menu-style.css">
+    <link rel="stylesheet" href="css/menu-style-tablet.css">
+    <link rel="stylesheet" href="css/menu-style-desktop.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -15,134 +17,171 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="package.json">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700&family=Shrikhand&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <header class="header">
         <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
-        <img class="size-logo" src="images/logo/ohmyfood.png" alt="logo-ohmyfood">
+        <h1>ohmyfood</h1>
     </header>
-    <section class="menu">
-        <h2>Le délice des sens</h2>
-        <section class="starter">
-            <h3 class="starter__title">Entrées</h3>
-            <!--Card 1-->
-            <div class="starter__card">
-                <div class="starter__card-text">
-                    <h4>Tartare de thon</h4>
-                    <p>Assaisonné au yuzu</p>
-                </div>
-                <div class="starter__card-price">
-                    <p>25€</p>
-                </div>
+    <main class="main">
+        <div class="header__img">
+            <img class="header__img-style" src="images/restaurants/Le-délice-des-sens.jpg"
+                alt="restaurant la palette du gout">
+        </div>
+        <section class="menu">
+            <div class="menu__main-title">
+                <h2>Le délice des sens</h2>
+                <button class="menu-main-title__btn" type="button">
+                    <i class="menu-main-title__btn-icon-fill fa-solid fa-heart"></i>
+                    <i class="menu-main-title__btn-icon-umpty fa-regular fa-heart"></i>
+                </button>
             </div>
-            <!--Card 2-->
-            <div class="starter__card">
-                <div class="starter__card-text">
-                    <h4>Bouchée de homard croustillant</h4>
-                    <p>Et sa farandole de petits légumes</p>
+            <section class="starter">
+                <div class="menu__title">
+                    <h3>Entrées</h3>
                 </div>
-                <div class="starter__card-price">
-                    <p>35€</p>
+                <div class="menu__container-cards">
+                    <!--Card 1-->
+                    <div class=" menu__card">
+                        <div class="menu__card-text">
+                            <h4>Tartare de thon</h4>
+                            <p>Assaisonné au yuzu</p>
+                        </div>
+                        <div class="menu__card-price">
+                            <p>25€</p>
+                        </div>
+                        <div class="check-box"><i class="fa-solid fa-circle-check"></i></div>
+                    </div>
+                    <!--Card 2-->
+                    <div class="menu__card">
+                        <div class="menu__card-text">
+                            <h4>Bouchée de homard croustillant</h4>
+                            <p>Et sa farandole de petits légumes</p>
+                        </div>
+                        <div class="menu__card-price">
+                            <p>35€</p>
+                        </div>
+                        <div class="check-box"><i class="fa-solid fa-circle-check"></i></div>
+                    </div>
+                    <!--Card 3-->
+                    <div class="menu__card">
+                        <div class="menu__card-text">
+                            <h4>Velouté de cèpes</h4>
+                            <p>Aux truffes</p>
+                        </div>
+                        <div class="menu__card-price">
+                            <p>20€</p>
+                        </div>
+                        <div class="check-box"><i class="fa-solid fa-circle-check"></i></div>
+                    </div>
                 </div>
-            </div>
-            <!--Card 3-->
-            <div class="starter__card">
-                <div class="starter__card-text">
-                    <h4>Velouté de cèpes</h4>
-                    <p>Aux truffes</p>
+            </section>
+            <section class="dish">
+                <div class="menu__title">
+                    <h3>Plats</h3>
                 </div>
-                <div class="starter__card-price">
-                    <p>20€</p>
+                <div class="menu__container-cards">
+                    <!--Card 1-->
+                    <div class="menu__card">
+                        <div class="menu__card-text">
+                            <h4>Poulet rôti aux herbes de Provence</h4>
+                            <p>Et sa crème de truffe</p>
+                        </div>
+                        <div class="menu__card-price">
+                            <p>40€</p>
+                        </div>
+                        <div class="check-box"><i class="fa-solid fa-circle-check"></i></div>
+                    </div>
+                    <!--Card 2-->
+                    <div class="menu__card">
+                        <div class="menu__card-text">
+                            <h4>Langouste rôtie</h4>
+                            <p>Et ses légumes de saison</p>
+                        </div>
+                        <div class="menu__card-price">
+                            <p>35€</p>
+                        </div>
+                        <div class="check-box"><i class="fa-solid fa-circle-check"></i></div>
+                    </div>
+                    <!--Card 3-->
+                    <div class="menu__card">
+                        <div class="menu__card-text">
+                            <h4>Côte de boeuf Angus</h4>
+                            <p>Et sa purée de panais</p>
+                        </div>
+                        <div class="menu__card-price">
+                            <p>44€</p>
+                        </div>
+                        <div class="check-box"><i class="fa-solid fa-circle-check"></i></div>
+                    </div>
                 </div>
-            </div>
+            </section>
+            <section class="dessert">
+                <div class="menu__title">
+                    <h3>Desserts</h3>
+                </div>
+                <div class="menu__container-cards">
+                    <!--Card 1-->
+                    <div class="menu__card">
+                        <div class="menu__card-text">
+                            <h4>Farandole de desserts</h4>
+                            <p>Du chef</p>
+                        </div>
+                        <div class="menu__card-price">
+                            <p>18€</p>
+                        </div>
+                        <div class="check-box"><i class="fa-solid fa-circle-check"></i></div>
+                    </div>
+                    <!--Card 2-->
+                    <div class="menu__card">
+                        <div class="menu__card-text">
+                            <h4>Crème brulée</h4>
+                            <p>Revisitée</p>
+                        </div>
+                        <div class="menu__card-price">
+                            <p>22€</p>
+                        </div>
+                        <div class="check-box"><i class="fa-solid fa-circle-check"></i></div>
+                    </div>
+                    <!--Card 3-->
+                    <div class="menu__card">
+                        <div class="menu__card-text">
+                            <h4>Tiramisu</h4>
+                            <p>À la noisette</p>
+                        </div>
+                        <div class="menu__card-price">
+                            <p>23€</p>
+                        </div>
+                        <div class="check-box"><i class="fa-solid fa-circle-check"></i></div>
+                    </div>
+                </div>
+            </section>
         </section>
-        <section class="dish">
-            <h3 class="dish__title">Plats</h3>
-            <!--Card 1-->
-            <div class="dish__card">
-                <div class="dish__card-text">
-                    <h4>Poulet rôti aux herbes de Provence</h4>
-                    <p>Et sa crème de truffe</p>
-                </div>
-                <div class="dish__card-price">
-                    <p>40€</p>
-                </div>
-            </div>
-            <!--Card 2-->
-            <div class="dish__card">
-                <div class="dish__card-text">
-                    <h4>Langouste rôtie</h4>
-                    <p>Et ses légumes de saison</p>
-                </div>
-                <div class="dish__card-price">
-                    <p>35€</p>
-                </div>
-            </div>
-            <!--Card 3-->
-            <div class="dish__card">
-                <div class="dish__card-text">
-                    <h4>Côte de boeuf Angus</h4>
-                    <p>Et sa purée de panais</p>
-                </div>
-                <div class="dish__card-price">
-                    <p>44€</p>
-                </div>
-            </div>
+        <section class="section-menu__btn">
+            <input class="menu__btn" type="submit" value="Commander">
         </section>
-        <section class="dessert">
-            <h3 class="dessert__title">Desserts</h3>
-            <!--Card 1-->
-            <div class="dessert__card">
-                <div class="dessert__card-text">
-                    <h4>Farandole de desserts</h4>
-                    <p>Du chef</p>
-                </div>
-                <div class="dessert__card-price">
-                    <p>18€</p>
-                </div>
-            </div>
-            <!--Card 2-->
-            <div class="dessert__card">
-                <div class="dessert__card-text">
-                    <h4>Crème brulée</h4>
-                    <p>Revisitée</p>
-                </div>
-                <div class="dessert__card-price">
-                    <p>22€</p>
-                </div>
-            </div>
-            <!--Card 3-->
-            <div class="dessert__card">
-                <div class="dessert__card-text">
-                    <h4>Tiramisu</h4>
-                    <p>À la noisette</p>
-                </div>
-                <div class="dessert__card-price">
-                    <p>23€</p>
-                </div>
-            </div>
-        </section>
-    </section>
+    </main>
 
     <footer class="footer">
         <h2 class="footer__logo">ohmyfood</h2>
 
         <ul class="footer-ul">
             <li class="footer-ul__li">
-                <i class=" footer-ul__li--icon1 icon fas fa-utensils"></i>
-                <a class="footer-ul__li--a" href="#">Proposer un restaurant</a>
+                <i class=" footer-ul__li-icon icon fas fa-utensils"></i>
+                <a class="footer-ul__li-a" href="#">Proposer un restaurant</a>
             </li>
             <li class="footer-ul__li">
-                <i class=" footer-ul__li--icon2 icon fas fa-hands-helping"></i>
-                <a class="footer-ul__li--a" href="#">Devenir partenaire</a>
+                <i class=" footer-ul__li-icon icon fas fa-hands-helping"></i>
+                <a class="footer-ul__li-a" href="#">Devenir partenaire</a>
             </li>
             <li class="footer-ul__li">
-                <a class="footer-ul__li--a" href="#">Mentions légales</a>
+                <a class="footer-ul__li-a" href="#">Mentions légales</a>
             </li>
             <li class="footer-ul__li">
-                <a class="footer-ul__li--a" href="mailto:contact@ohmyfood.com">Contact</a>
+                <a class="footer-ul__li-a" href="mailto:contact@ohmyfood.com">Contact</a>
             </li>
         </ul>
     </footer>
