--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
         <div class="exploration-content">
             <h1>Réservez le menu qui vous convient</h1>
             <h2>Découvrez des restaurants d'exeption, sélectionnés par nos soins.</h2>
-            <input class="exploration-content__btn" type="submit" value="Explorer nos restaurants">
+            <button class="exploration-content__btn" type="button">Explorer nos restaurants</button>
         </div>
     </section>
     <main class="main">
@@ -65,7 +65,7 @@
                 <!--Card 1 la palette du goût-->
                 <a href="menu-la-palette.html" class="card-restaurant new">
                     <div class="card-restaurant__header">
-                        <img class="card-restaurant__header-img" src="images/restaurants/la-palette-du-gout.jpg"
+                        <img class="card-restaurant__header-img" src="images/restaurants/1.jpg"
                             alt="Restaurant la palette du goût">
                     </div>
                     <div class="card-restaurant__content">
@@ -82,7 +82,7 @@
                 <!--Card 2 la note enchantée-->
                 <a href="menu-la-note.html" class="card-restaurant new">
                     <div class="card-restaurant__header">
-                        <img class="card-restaurant__header-img" src="images/restaurants/La-note-enchantée.jpg"
+                        <img class="card-restaurant__header-img" src="images/restaurants/2.jpg"
                             alt="Restaurant la note enchantée">
                     </div>
                     <div class="card-restaurant__content">
@@ -99,7 +99,7 @@
                 <!--Card 3 Restaurant français-->
                 <a href="menu-francais.html" class="card-restaurant">
                     <div class="card-restaurant__header">
-                        <img class="card-restaurant__header-img" src="images/restaurants/a-la-francaise.jpg"
+                        <img class="card-restaurant__header-img" src="images/restaurants/3.jpg"
                             alt="Restaurant français">
                     </div>
                     <div class="card-restaurant__content">
@@ -116,7 +116,7 @@
                 <!--Card 4 Restaurant le délice des sens-->
                 <a href="menu-le-delice.html" class="card-restaurant">
                     <div class="card-restaurant__header">
-                        <img class="card-restaurant__header-img" src="images/restaurants/Le-délice-des-sens.jpg"
+                        <img class="card-restaurant__header-img" src="images/restaurants/4.jpg"
                             alt="Restaurant le délice des sens">
                     </div>
                     <div class="card-restaurant__content">
