--- a/src/menu-francais.html
+++ b/src/menu-francais.html
@@ -39,7 +39,7 @@
                     <i class="menu-main-title__btn-icon-umpty fa-regular fa-heart"></i>
                 </button>
             </div>
-            <section class="starter">
+            <div class="starter">
                 <div class="menu__title">
                     <h3>Entrées</h3>
                 </div>
@@ -78,8 +78,8 @@
                         <div class="check-box"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                 </div>
-            </section>
-            <section class="dish">
+            </div>
+            <div class="dish">
                 <div class="menu__title">
                     <h3>Plats</h3>
                 </div>
@@ -118,8 +118,8 @@
                         <div class="check-box"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                 </div>
-            </section>
-            <section class="dessert">
+            </div>
+            <div class="dessert">
                 <div class="menu__title">
                     <h3>Desserts</h3>
                 </div>
@@ -158,10 +158,12 @@
                         <div class="check-box"><i class="fa-solid fa-circle-check"></i></div>
                     </div>
                 </div>
-            </section>
+            </div>
         </section>
         <section class="section-menu__btn">
-            <input class="menu__btn" type="submit" value="Commander">
+            <button class="menu__btn" type="button">
+                Commander
+            </button>
         </section>
     </main>
 
