--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,10 @@
 </head>
 
 <body>
+    <div class="loader-section">
+        <span class="loarder"></span>
+        Chargement...
+    </div>
     <header class="header">
         <img class="size-logo" src="images/logo/ohmyfood.png" alt="logo-ohmyfood">
     </header>
