--- a/src/menu-francais.html
+++ b/src/menu-francais.html
@@ -160,11 +160,11 @@
                 </div>
             </div>
         </section>
-        <section class="section-menu__btn">
-            <button class="menu__btn" type="button">
+        <div class="section-menu__btn">
+            <button class="gradient-btn" type="button">
                 Commander
             </button>
-        </section>
+        </div>
     </main>
 
     <footer class="footer">
